--- a/assets/scss/layout/woocommerce/_product-texture.scss
+++ b/assets/scss/layout/woocommerce/_product-texture.scss
@@ -1,7 +1,7 @@
 .cam-product-texture {
     clear: both;
     &__title {
-        color: $gris-superclaro;
+        color: $gris-oscuro;
     }
     &__img {
         transition: all .4s ease-in-out;
