--- a/assets/scss/layout/woocommerce/_woo-global.scss
+++ b/assets/scss/layout/woocommerce/_woo-global.scss
@@ -222,3 +222,6 @@ a.button {
 #calc_shipping_country_field, #calc_shipping_postcode_field{
   display:none;
 }
+#ship-to-different-address{
+  padding-bottom: 40px;
+}
