--- a/assets/scss/layout/woocommerce/_woo-global.scss
+++ b/assets/scss/layout/woocommerce/_woo-global.scss
@@ -35,7 +35,12 @@
       border-radius: 0;
       color: $white;
       font-weight: 400;
-      padding: 6px;
+      padding: 4px;
+      margin: 5px 0;
+      font-size: 10px;
+      @include MQ(S){
+        display: block;
+      }
       &:hover {
         background: $rosa-cam;
         color: $white;
