--- a/assets/scss/layout/woocommerce/_product-texture.scss
+++ b/assets/scss/layout/woocommerce/_product-texture.scss
@@ -1,5 +1,8 @@
 .cam-product-texture {
     clear: both;
+    @include MQ(S){
+        text-align: center;
+    }
     &__title {
         color: $gris-oscuro;
     }
