--- a/assets/scss/layout/woocommerce/_woo-single-product.scss
+++ b/assets/scss/layout/woocommerce/_woo-single-product.scss
@@ -88,7 +88,7 @@
 .woocommerce div.product span.price {
   font-size: 1.25em;
   padding-top: 20px;
-  color: goldenrod;
+  //color: goldenrod;
 }
 
 .cd-price {
